Load fb module before glamoregl/shadow modules

Fixes unresolved symbols on some systems.

Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=93105
Reviewed-by: Alex Deucher <alexander.deucher@amd.com>